fixing word wrap overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,12 +47,12 @@ a {
 
 p,
 span {
-  @apply text-base md:text-xl;
+  @apply text-base md:text-lg;
 }
 
 .Card {
-  @apply p-4 w-full flex flex-col h-64 justify-between rounded-xl border-2 border-transparent hover:border-red;
+  @apply break-words p-4 w-1/3 flex flex-col h-64 justify-between rounded-xl border-2 border-transparent hover:border-red;
 }
 .Card h3 {
-  @apply font-bold text-xl ;
+  @apply font-bold text-lg;
 }
